<resources>
    <string name="app_name">Netflix</string>
    <string name="title">House of Cards</string>
    <string name="display_session_and_episode">S1:E3</string>
    <string name="menu_message">Menu de mensagem</string>
    <string name="menu_volume">Menu de volume</string>
    <string name="menu_star">Menu de de avaliações</string>
    <string name="menu_content">Menu de conteúdo</string>
    <string name="menu_image">Menu de imagem</string>
</resources>